tests/baselines/reference/superCallArgsMustMatch.errors.txt
tests/cases/compiler/superCallArgsMustMatch.ts(17,9): error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'T5<T>'.


==== tests/cases/compiler/superCallArgsMustMatch.ts (1 errors) ====
    class T5<T>{
    
        public foo: T;
    
        constructor(public bar: T) { }
    
    }
    
     
    
    class T6 extends T5<number>{
    
        constructor() {
    
            // Should error; base constructor has type T for first arg,
            // which is instantiated with 'number' in the extends clause
            super("hi");
            ~~~~~~~~~~~
!!! error TS2684: The 'this' context of type 'void' is not assignable to method's 'this' of type 'T5<T>'.
    
            var x: number = this.foo;
    
        }
    
    }
    
    